// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateService - Snapshot Tests with Real Templates > renderActionPrompt > should render action prompt with placeholder 1`] = `
"<div class="action-prompt" role="region" aria-label="Section interaction" id="action-prompt-experience" data-section-id="experience">
      <div class="prompt-input-wrapper">
        <label for="prompt-input" class="sr-only">Ask a question or get default information</label>
        <input type="text" id="prompt-input-experience" class="prompt-input" placeholder="React, Node.js, TypeScript" maxlength="150" aria-describedby="prompt-hint">
        <span id="prompt-hint" class="sr-only">Enter a custom question or leave empty for default content</span>
        <button class="prompt-button" aria-label="Submit prompt" data-default-text="Get to know Experience" data-section-id="experience">Get to know Experience</button>
      </div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderLoader > should render loader component 1`] = `
"<div class="loader" role="status" aria-live="polite">
      <div class="loader-spinner"></div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with emoji icon 1`] = `
"<a href="#section-projects" class="nav-item" data-section-id="projects" role="menuitem" aria-label="Navigate to Projects" data-tooltip="Projects">
      <span class="nav-icon" aria-hidden="true">📁</span>
      <span class="nav-title" data-text="Projects"></span>
    </a>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderNavigationItem > should render navigation item with fallback icon 1`] = `
"<a href="#section-contact" class="nav-item" data-section-id="contact" role="menuitem" aria-label="Navigate to Contact" data-tooltip="Contact">
      <span class="nav-icon" aria-hidden="true">📄</span>
      <span class="nav-title" data-text="Contact"></span>
    </a>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderPersonalizationModal > should render personalization modal with glass effect 1`] = `
"<div class="modal-overlay modal-overlay--glass" role="dialog" aria-modal="true" aria-labelledby="personalization-title">
      <div class="modal-content modal-content--personalization">
        <h2 id="personalization-title" class="modal-title">Welcome! Let's personalize your experience</h2>
        
        <div class="personalization-form">
          <div class="form-group">
            <label for="user-name-input" class="form-label">What's your name?</label>
            <input type="text" id="user-name-input" class="form-input" placeholder="Enter your name" maxlength="50" required="" aria-required="true">
          </div>
          
          <div class="form-group">
            <p class="form-label">I'm a...</p>
            <div class="role-buttons" role="radiogroup" aria-label="Select your role">
              <button class="role-button" data-role="recruiter" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">💼</span>
                <span class="role-label">Recruiter</span>
              </button>
              <button class="role-button" data-role="developer" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">💻</span>
                <span class="role-label">Developer</span>
              </button>
              <button class="role-button" data-role="friend" role="radio" aria-checked="false">
                <span class="role-icon" aria-hidden="true">👋</span>
                <span class="role-label">Friend</span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with developer role disabled 1`] = `
"<div class="modal-overlay modal-overlay--glass" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>
        
        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>
        
        <div class="role-buttons" role="radiogroup" aria-label="Select new role">
          <button class="role-button" data-role="recruiter" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">💼</span>
            <span class="role-label">Recruiter</span>
          </button>
          <button class="role-button role-button--disabled" data-role="developer" role="radio" aria-checked="true" aria-disabled="true" disabled="">
            <span class="role-icon" aria-hidden="true">💻</span>
            <span class="role-label">Developer</span>
          </button>
          <button class="role-button" data-role="friend" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">👋</span>
            <span class="role-label">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with friend role disabled 1`] = `
"<div class="modal-overlay modal-overlay--glass" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>
        
        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>
        
        <div class="role-buttons" role="radiogroup" aria-label="Select new role">
          <button class="role-button" data-role="recruiter" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">💼</span>
            <span class="role-label">Recruiter</span>
          </button>
          <button class="role-button" data-role="developer" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">💻</span>
            <span class="role-label">Developer</span>
          </button>
          <button class="role-button role-button--disabled" data-role="friend" role="radio" aria-checked="true" aria-disabled="true" disabled="">
            <span class="role-icon" aria-hidden="true">👋</span>
            <span class="role-label">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderRoleChangeModal > should render role change modal with recruiter role disabled 1`] = `
"<div class="modal-overlay modal-overlay--glass" role="dialog" aria-modal="true" aria-labelledby="role-change-title">
      <div class="modal-content modal-content--role-change">
        <button class="modal-close" aria-label="Close modal">
          <span aria-hidden="true">×</span>
        </button>
        
        <h2 id="role-change-title" class="modal-title">Change Your Role</h2>
        <p class="modal-description">Select a different perspective to see personalized content</p>
        
        <div class="role-buttons" role="radiogroup" aria-label="Select new role">
          <button class="role-button role-button--disabled" data-role="recruiter" role="radio" aria-checked="true" aria-disabled="true" disabled="">
            <span class="role-icon" aria-hidden="true">💼</span>
            <span class="role-label">Recruiter</span>
          </button>
          <button class="role-button" data-role="developer" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">💻</span>
            <span class="role-label">Developer</span>
          </button>
          <button class="role-button" data-role="friend" role="radio" aria-checked="false" aria-disabled="false">
            <span class="role-icon" aria-hidden="true">👋</span>
            <span class="role-label">Friend</span>
          </button>
        </div>
      </div>
    </div>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderSection > should render section with custom query 1`] = `
"<section class="portfolio-section" data-section-id="skills" id="section-skills">
      <div class="parallax-layer" aria-hidden="true"></div>
      <div class="section-header">
        <h2 class="section-title">Skills</h2>
        <p class="section-query" style="display: block;">"What are your top 3 programming languages?"</p>
      </div>
      <div class="section-content zig-zag-left">
        <div class="content-image" data-image-url="/images/skills.jpg" data-image-alt="Skills visualization" data-aspect-ratio="aspect-video">
          <!-- Image will be inserted here -->
        </div>
        <div class="content-text" data-text="Here are my technical skills and expertise.">
          <!-- Text content will be inserted here -->
        </div>
      </div>
    </section>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderSection > should render section with zig-zag-left layout 1`] = `
"<section class="portfolio-section" data-section-id="hero" id="section-hero">
      <div class="parallax-layer" aria-hidden="true"></div>
      <div class="section-header">
        <h2 class="section-title">Welcome</h2>
        <p class="section-query" style="display: none;"></p>
      </div>
      <div class="section-content zig-zag-left">
        <div class="content-image" data-image-url="/images/hero.jpg" data-image-alt="Hero image" data-aspect-ratio="aspect-video">
          <!-- Image will be inserted here -->
        </div>
        <div class="content-text" data-text="This is the hero section with some introductory text.">
          <!-- Text content will be inserted here -->
        </div>
      </div>
    </section>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderSection > should render section with zig-zag-right layout 1`] = `
"<section class="portfolio-section" data-section-id="about" id="section-about">
      <div class="parallax-layer" aria-hidden="true"></div>
      <div class="section-header">
        <h2 class="section-title">About Me</h2>
        <p class="section-query" style="display: none;"></p>
      </div>
      <div class="section-content zig-zag-right">
        <div class="content-image" data-image-url="/images/about.jpg" data-image-alt="About image" data-aspect-ratio="aspect-square">
          <!-- Image will be inserted here -->
        </div>
        <div class="content-text" data-text="Learn more about my background and experience.">
          <!-- Text content will be inserted here -->
        </div>
      </div>
    </section>"
`;

exports[`TemplateService - Snapshot Tests with Real Templates > renderTypingIndicator > should return existing typing indicator from DOM 1`] = `
"<div id="typing-indicator" class="typing-indicator" role="status" aria-live="polite" style="display: none;">
      <span class="typing-dot"></span>
      <span class="typing-dot"></span>
      <span class="typing-dot"></span>
      <span class="typing-text">Generating content...</span>
    </div>"
`;
